# KubernetesService-TestTask

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
prometheus_data/: prometheus.yml
src/: config.py  main.py  schemas.py  storage_example.json  storage_ops.py
